Changed some buttons

--- a/Clients/Angular/src/app/components/robot-type-editor/robot-type-editor.component.html
+++ b/Clients/Angular/src/app/components/robot-type-editor/robot-type-editor.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="doSave()" class="editor lower-3">
     <div class="commands">
         <button mat-raised-button color="accent" class="command-button" (click)="doClose()">
-            Close
+            <mat-icon>arrow_back</mat-icon> Back
         </button>
         <div class="spacer"></div>
         <button mat-raised-button color="primary" type="submit">
