--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -16,8 +16,14 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" (click)="import()">Import Robot
-                            Type</button>
+                        <button mat-raised-button color="accent" class="command-button" [matMenuTriggerFor]="importMenu"
+                            (click)="import()">
+                            Import <mat-icon>arrow_drop_down</mat-icon>
+                        </button>
+                        <mat-menu #importMenu="matMenu">
+                            <button mat-menu-item>Package</button>
+                            <button mat-menu-item [disabled]="selection.selected.length < 1">Toolbox</button>
+                        </mat-menu>
                     </div>
                 </div>
             </div>
