--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -5,29 +5,28 @@
             <span mat-card-avatar class="app-icon"></span> 
             <span class="app-title">NaoBlocks</span>
           </mat-toolbar>
-        <mat-nav-list>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Play current program" class="menu-icon">play_arrow</mat-icon> Play
-            </a>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program" class="menu-icon">stop</mat-icon> Stop
-            </a>
-            <mat-divider></mat-divider>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Delete current program" class="menu-icon">delete_outline</mat-icon> Clear
-            </a>
-            <mat-divider></mat-divider>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Load existing program" class="menu-icon">file_download</mat-icon> Load
-            </a>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Save current program" class="menu-icon">publish</mat-icon> Save
-            </a>
-            <mat-divider></mat-divider>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Change execution settings" class="menu-icon">tune</mat-icon> Settings
-            </a>
-        </mat-nav-list>
+        <mat-action-list *ngIf="view === 'editor'">
+            <button mat-list-item (click)="playProgram()" *ngIf="!isPlaying">
+                <mat-icon matListIcon aria-label="Play current program">play_arrow</mat-icon> Play
+            </button>
+            <button mat-list-item (click)="stopProgram()" *ngIf="isPlaying">
+                <mat-icon matListIcon aria-label="Stop current program">stop</mat-icon> Stop
+            </button>
+            <mat-divider *ngIf="!isPlaying"></mat-divider>
+            <button mat-list-item (click)="deleteProgram()" *ngIf="!isPlaying">
+                <mat-icon matListIcon aria-label="Delete current program">delete_outline</mat-icon> Clear
+            </button>
+            <button mat-list-item (click)="loadProgram()" *ngIf="!isPlaying">
+                <mat-icon matListIcon aria-label="Load existing program">file_download</mat-icon> Load
+            </button>
+            <button mat-list-item (click)="saveProgram()" *ngIf="!isPlaying">
+                <mat-icon matListIcon aria-label="Save current program">publish</mat-icon> Save
+            </button>
+            <mat-divider *ngIf="!isPlaying"></mat-divider>
+            <button mat-list-item (click)="showDebugSettings()" *ngIf="!isPlaying">
+                <mat-icon matListIcon aria-label="Change execution settings">tune</mat-icon> Debug Settings
+            </button>
+        </mat-action-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
@@ -43,7 +42,7 @@
             <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="showSettings()">
                     <mat-icon>settings</mat-icon>
-                    <span>Settings</span>
+                    <span>User Settings</span>
                 </button>
                 <mat-divider></mat-divider>
                 <button mat-menu-item (click)="openChangeRole('Student')" *ngIf="canChangeRole()">
@@ -90,5 +89,13 @@
             <span class="example-spacer"></span>
             <button mat-stroked-button (click)="showSettings()">Settings</button>
         </mat-toolbar>
+
+        <div [ngSwitch]="view">
+            <app-blockly-editor *ngSwitchCase="'editor'"></app-blockly-editor>
+            <app-settings-debug *ngSwitchCase="'debug-settings'" (closed)="onClosed($event)"></app-settings-debug>
+            <app-settings-student *ngSwitchCase="'user-settings'" (closed)="onClosed($event)"></app-settings-student>
+            <app-program-load *ngSwitchCase="'load-program'" (closed)="onClosed($event)"></app-program-load>
+            <app-program-save *ngSwitchCase="'save-program'" (closed)="onClosed($event)"></app-program-save>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
