Added styling to the execution startup status

--- a/Clients/Angular/src/app/components/execution-status/execution-status.component.html
+++ b/Clients/Angular/src/app/components/execution-status/execution-status.component.html
@@ -2,22 +2,22 @@
     Starting Program
 </h1>
 <div mat-dialog-content>
-    <ul>
+    <ul class="steps">
         <li *ngFor="let step of data.steps">
             <div>
-                <span>{{step.title}}</span>
-                <span>{{step.description}}</span>
+                <mat-icon class="{{step.status}}">{{step.image}}</mat-icon>
+                <span class="step-title">{{step.title}}</span>
+                <span class="step-description">{{step.description}}</span>
             </div>
         </li>
     </ul>
-    <div *ngIf="data.startMessage">
-        <div>
-            <div>
-                {{data.startMessage}}
-            </div>
+    <div *ngIf="data.startMessage" class="error-message">
+        <mat-icon>error_outline</mat-icon>
+        <div class="inner">
+            {{data.startMessage}}
         </div>
     </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="doClose()">{{data.startMessage ? 'Close' : 'Cancel'}}</button>
+    <button mat-button (click)="doClose()">{{data.startMessage ? 'Close' : 'Cancel'}}</button>
 </div>
