--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -83,7 +83,7 @@
 
         <div [ngSwitch]="view">
             <app-blockly-editor *ngSwitchCase="'blockly'" [editorSettings]="editorSettings" [controller]="controller"></app-blockly-editor>
-            <app-settings-debug *ngSwitchCase="'debug-settings'" (closed)="onClosed($event)"></app-settings-debug>
+            <app-settings-debug *ngSwitchCase="'debug-settings'" (closed)="onSettingsClosed($event)" [settings]="runSettings"></app-settings-debug>
             <app-settings-student *ngSwitchCase="'user-settings'" (closed)="onClosed($event)"></app-settings-student>
             <app-program-load *ngSwitchCase="'load-program'" (closed)="onClosed($event)"></app-program-load>
             <app-program-save *ngSwitchCase="'save-program'" (closed)="onClosed($event)"></app-program-save>
