--- a/Clients/Angular/src/app/components/change-view/change-view.component.html
+++ b/Clients/Angular/src/app/components/change-view/change-view.component.html
@@ -1,1 +1,8 @@
-<p>change-view works!</p>
+<mat-nav-list>
+    <div *ngFor="let view of data.views">
+        <a href="#" mat-list-item  (click)="changeView($event, view.name)">
+            <mat-icon>{{isCurrent(view) ? 'preview' : 'web_asset'}}</mat-icon>
+            <span mat-line>{{view.title}}</span>
+        </a>
+    </div>
+</mat-nav-list>
