Work on system initialisation: * Added system initialisation component * Add message for no system default robot type * Add link from home to robot types list

--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -59,6 +59,11 @@
             </div>
         </div>
 
+        <mat-error class="missing-default" *ngIf="!hasSystemDefault">
+            <mat-icon>warning</mat-icon>
+            There is no system default robot type.
+        </mat-error>
+
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
 
             <ng-container matColumnDef="name">
