--- a/Clients/Angular/src/app/components/system-initialisation/system-initialisation.component.html
+++ b/Clients/Angular/src/app/components/system-initialisation/system-initialisation.component.html
@@ -2,26 +2,22 @@
     <mat-card>
         <mat-card-header>
             <div mat-card-avatar class="app-icon"></div>
-            <mat-card-title>Login</mat-card-title>
+            <mat-card-title>Initialise System</mat-card-title>
             <mat-card-subtitle>
                 NaoBlocks
                 <span *ngIf="version">({{version.version}})</span>
             </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-            <div *ngIf="reason">
-                <mat-icon>lock_clock</mat-icon>
-                {{reason}}
+            <div>
+                The system has not been initialised. Please enter an admin password.
             </div>
-            <mat-error *ngIf="loginInvalid">
-                The username and/or password were not recognized
+            <div>
+                This password will be used for the <b>admin</b> account.
+            </div>
+            <mat-error *ngIf="initialisationFailed">
+                Unable to initialise system
             </mat-error>
-            <mat-form-field class="full-width-input">
-                <input matInput placeholder="Username" formControlName="username" required>
-                <mat-error>
-                    Please provide a valid username
-                </mat-error>
-            </mat-form-field>
             <mat-form-field class="full-width-input">
                 <input matInput type="password" placeholder="Password" formControlName="password" required>
                 <mat-error>
@@ -30,13 +26,13 @@
             </mat-form-field>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-stroked-button type="submit" *ngIf="!loggingIn">
-                Login
+            <button mat-stroked-button type="submit" *ngIf="!initialising">
+                Initialise
             </button>
-            <div class="spinner" *ngIf="loggingIn">
+            <div class="spinner" *ngIf="initialising">
                 <span>
                     <mat-spinner class="inner" diameter="14"></mat-spinner>
-                    Authenticating, please wait...
+                    Initialising, please wait...
                 </span>
             </div>
         </mat-card-actions>
