--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -16,13 +16,12 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" [matMenuTriggerFor]="importMenu"
-                            (click)="import()">
+                        <button mat-raised-button color="accent" class="command-button" [matMenuTriggerFor]="importMenu">
                             Import <mat-icon>arrow_drop_down</mat-icon>
                         </button>
                         <mat-menu #importMenu="matMenu">
-                            <button mat-menu-item>Package</button>
-                            <button mat-menu-item [disabled]="selection.selected.length < 1">Toolbox</button>
+                            <button mat-menu-item (click)="importPackage()">Package</button>
+                            <button mat-menu-item [disabled]="selection.selected.length < 1" (click)="importToolbox()">Toolbox</button>
                         </mat-menu>
                     </div>
                 </div>
@@ -71,8 +70,12 @@
                 <td mat-cell *matCellDef="let record"> {{record.name}} </td>
             </ng-container>
             <ng-container matColumnDef="isDefault">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'Default' : ''}} </td>
+                <th mat-header-cell *matHeaderCellDef> Default </th>
+                <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'System' : ''}} </td>
+            </ng-container>
+            <ng-container matColumnDef="toolbox">
+                <th mat-header-cell *matHeaderCellDef> Toolbox </th>
+                <td mat-cell *matCellDef="let record"> {{!record.hasToolbox ? 'Missing' : ''}} </td>
             </ng-container>
             <ng-container matColumnDef="select">
                 <th mat-header-cell *matHeaderCellDef>
