Implemented tangible blocks: * Added a block definition * Allow downloading the block definitions * Updated the client to show the blocks

--- a/Clients/Angular/src/app/components/import-dialog/import-dialog.component.html
+++ b/Clients/Angular/src/app/components/import-dialog/import-dialog.component.html
@@ -51,4 +51,5 @@
     <button mat-button [disabled]="status.isUploading" *ngIf="!status.isUploadCompleted"
         (click)="startUpload()">Upload</button>
     <button mat-button *ngIf="status.isUploadCompleted" [mat-dialog-close]="true">Close</button>
+    <button mat-button *ngIf="status.isUploadCompleted && data.allowReImport" (click)="startUpload()">Retry</button>
 </mat-dialog-actions>
