--- a/Clients/Angular/src/app/components/tangible-editor/tangible-editor.component.scss
+++ b/Clients/Angular/src/app/components/tangible-editor/tangible-editor.component.scss
@@ -27,7 +27,7 @@
 
         img {
             float: left;
-            margin: 0.5rem 0;
+            margin: 1rem 0.5rem;
         }
 
         p {
