--- a/Clients/Angular/src/app/components/settings-student/settings-student.component.html
+++ b/Clients/Angular/src/app/components/settings-student/settings-student.component.html
@@ -8,16 +8,14 @@
             Save
         </button>
     </div>
-    <mat-card>
-        <mat-card-content>
-            <app-user-settings (closed)="doClose()" [showAllocation]="true"></app-user-settings>
-            
-            <mat-error *ngIf="errors.length > 0" class="lower-1">
-                There were some errors saving the robot type:
-                <ul>
-                    <li *ngFor="let error of errors">{{error}}</li>
-                </ul>
-            </mat-error>
-        </mat-card-content>
-    </mat-card>
+    <div>
+        <app-user-settings (closed)="doClose()" [showAllocation]="true" [settings]="settings.user"></app-user-settings>
+
+        <mat-error *ngIf="errors.length > 0" class="lower-1">
+            There were some errors saving the robot type:
+            <ul>
+                <li *ngFor="let error of errors">{{error}}</li>
+            </ul>
+        </mat-error>
+    </div>
 </form>
