--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -94,9 +94,9 @@
             </div>
             <app-settings-debug *ngSwitchCase="'debug-settings'" (closed)="onSettingsClosed($event)"
                 [settings]="runSettings"></app-settings-debug>
-            <app-settings-student *ngSwitchCase="'user-settings'" (closed)="onClosed($event)" [settings]="editorSettings"></app-settings-student>
-            <app-program-load *ngSwitchCase="'load-program'" (closed)="onClosed($event)"></app-program-load>
-            <app-program-save *ngSwitchCase="'save-program'" (closed)="onClosed($event)"></app-program-save>
+            <app-settings-student *ngSwitchCase="'user-settings'" (closed)="onClosed($event, true)" [settings]="editorSettings"></app-settings-student>
+            <app-program-load *ngSwitchCase="'load-program'" (closed)="onClosed($event, false)"></app-program-load>
+            <app-program-save *ngSwitchCase="'save-program'" (closed)="onClosed($event, false)"></app-program-save>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
