--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -31,8 +31,15 @@
                     Selection
                 </div>
                 <div>
-                    <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1"
-                        (click)="edit()">Edit</button>
+                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
+                        [matMenuTriggerFor]="exportMenu">
+                        Edit
+                        <mat-icon>arrow_drop_down</mat-icon>
+                    </button>
+                    <mat-menu #exportMenu="matMenu">
+                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="edit()">Robot Type</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="editBlocksSets()">Blocksets</button>
+                    </mat-menu>
                     <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
                         (click)="delete()">Delete</button>
                     <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1"
@@ -97,5 +104,8 @@
     </div>
     <div *ngSwitchCase="'editor'">
         <app-robot-type-editor [item]="currentItem" (closed)="onClosed($event)"></app-robot-type-editor>
+    </div>
+    <div *ngSwitchCase="'blocksets'">
+        <app-custom-block-editor [item]="currentItem" (closed)="onClosed($event)"></app-custom-block-editor>
     </div>
 </div>
