--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
@@ -66,10 +66,10 @@
         </mat-toolbar>
 
         <div *ngIf="hasAccess" [ngSwitch]="currentView">
-            <app-system-dashboard *ngSwitchCase="'Dashboard'"></app-system-dashboard>
+            <app-system-dashboard *ngSwitchCase="'Dashboard'" (currentItemChanged)="onItemChanged($event)"></app-system-dashboard>
             <app-robots-list *ngSwitchCase="'Robots'" (currentItemChanged)="onItemChanged($event)"></app-robots-list>
-            <app-students-list *ngSwitchCase="'Students'"></app-students-list>
-            <app-system-configuration *ngSwitchCase="'Configuration'"></app-system-configuration>
+            <app-students-list *ngSwitchCase="'Students'" (currentItemChanged)="onItemChanged($event)"></app-students-list>
+            <app-system-configuration *ngSwitchCase="'Configuration'" (currentItemChanged)="onItemChanged($event)"></app-system-configuration>
             <div *ngSwitchDefault class="unknown-view">
                 <mat-card>
                     <mat-card-title>
