--- a/Clients/Angular/src/app/components/user-settings/user-settings.component.html
+++ b/Clients/Angular/src/app/components/user-settings/user-settings.component.html
@@ -5,10 +5,10 @@
             <mat-card-content>
                 <mat-form-field class="fill-width">
                     <mat-label>Type</mat-label>
-                    <select matNativeControl formControlName="type" required (change)="onRobotTypeChange()">
-                        <option></option>
-                        <option *ngFor="let type of types" value="{{type.name}}">{{type.name}}</option>
-                    </select>
+                    <mat-select appearance="fill" formControlName="type" required (selectionChange)="onRobotTypeChange()">
+                        <mat-option></mat-option>
+                        <mat-option *ngFor="let type of types" [value]="type.name">{{type.name}}</mat-option>
+                    </mat-select>
                     <mat-error>
                         Please select a robot type
                     </mat-error>
@@ -18,11 +18,11 @@
                 <div *ngIf="showAllocation">
                     <mat-form-field class="fill-width">
                         <mat-label>Allocation Mode</mat-label>
-                        <select matNativeControl formControlName="allocationMode" required (change)="onAllocationModeChange()">
-                            <option value="0">Any robot</option>
-                            <option value="1" *ngIf="!!robots.length">Require robot</option>
-                            <option value="2" *ngIf="!!robots.length">Prefer robot</option>
-                        </select>
+                        <mat-select formControlName="allocationMode" required (selectionChange)="onAllocationModeChange()">
+                            <mat-option [value]="0">Any robot</mat-option>
+                            <mat-option [value]="1" *ngIf="!!robots.length">Require robot</mat-option>
+                            <mat-option [value]="2" *ngIf="!!robots.length">Prefer robot</mat-option>
+                        </mat-select>
                         <mat-error>
                             Please select an allocation mode
                         </mat-error>
@@ -31,12 +31,12 @@
 
                     <mat-form-field class="fill-width" *ngIf="allocationMode">
                         <mat-label>Type</mat-label>
-                        <select matNativeControl formControlName="robotId" required>
-                            <option></option>
-                            <option value="{{robot.machineName}}" *ngFor="let robot of robots">
+                        <mat-select formControlName="robotId" required>
+                            <mat-option></mat-option>
+                            <mat-option [value]="robot.machineName" *ngFor="let robot of robots">
                                 {{robot.friendlyName}}
-                                [{{robot.machineName}}]</option>
-                        </select>
+                                [{{robot.machineName}}]</mat-option>
+                        </mat-select>
                         <mat-error>
                             Please select a robot type
                         </mat-error>
@@ -52,10 +52,10 @@
             <mat-card-content>
                 <mat-form-field class="fill-width" *ngIf="showConfiguration">
                     <mat-label>Configuration Mode</mat-label>
-                    <select matNativeControl formControlName="configMode" required (change)="onConfigurationModeChange()">
-                        <option value="1">Standard</option>
-                        <option value="2" *ngIf="!!this.blockSets.length">Custom</option>
-                    </select>
+                    <mat-select formControlName="configMode" required (selectionChange)="onConfigurationModeChange()">
+                        <mat-option [value]="1">Standard</mat-option>
+                        <mat-option [value]="2" *ngIf="!!this.blockSets.length">Custom</mat-option>
+                    </mat-select>
                     <mat-error>
                         Please select a configuration mode
                     </mat-error>
@@ -65,9 +65,9 @@
                 <div *ngIf="configurationMode == 2">
                     <mat-form-field class="fill-width">
                         <mat-label>Custom Set</mat-label>
-                        <select matNativeControl formControlName="customBlockSet" required>
-                            <option value="{{set.value}}" *ngFor="let set of blockSets">{{set.name}}</option>
-                        </select>
+                        <mat-select formControlName="customBlockSet" required>
+                            <mat-option [value]="set.value" *ngFor="let set of blockSets">{{set.name}}</mat-option>
+                        </mat-select>
                         <mat-hint>The custom set of blocks to use</mat-hint>
                     </mat-form-field>
                 </div>
@@ -75,11 +75,11 @@
                 <div *ngIf="configurationMode == 1">
                     <mat-form-field class="fill-width">
                         <mat-label>Interface Style</mat-label>
-                        <select matNativeControl formControlName="interfaceStyle" required (change)="onInterfaceStyleChange()">
-                            <option value="1">Default Blocks</option>
-                            <option value="2">Simple Blocks</option>
-                            <option value="3">Event Blocks</option>
-                        </select>
+                        <mat-select formControlName="interfaceStyle" required (selectionChange)="onInterfaceStyleChange()">
+                            <mat-option [value]="1">Default Blocks</mat-option>
+                            <mat-option [value]="2">Simple Blocks</mat-option>
+                            <mat-option [value]="3">Event Blocks</mat-option>
+                        </mat-select>
                         <mat-error>
                             Please select a configuration mode
                         </mat-error>
